fix carousel squished images

--- a/src/stylesheets/components/_carousel.scss
+++ b/src/stylesheets/components/_carousel.scss
@@ -13,7 +13,8 @@
     @include cover;
     box: vertical left middle;
     width: 100%;
-    min-height: $single*30;
+    height: $single*30;
+    overflow: hidden;
     padding: 0 $single*1.25;
     @include from(lg) {
       padding: 0 $single*4;
@@ -34,21 +35,12 @@
       .Carousel-copy {
         box: vertical right middle;
       }
-      .Carousel-author {
-        text-align: right;
-        width: 100%;
-      }
-      .Carousel-button {
-        order: 1;
-        @include from(lg) {
-          margin: 0 auto 0 $single*4.25;
-        }
-      }
       .flex-wrapper {
-        order: 2;
+        order: 1;
+        text-align: right;
       }
       .Carousel-photo {
-        order: 3;
+        order: 2;
         margin-left: $single;
       }
     }
@@ -56,20 +48,6 @@
       @include overlay(false, null, true);
       .Carousel-container {
         box: vertical left middle;
-      }
-      .Carousel-photo {
-        order: 1;
-        margin-right: $single;
-      }
-      .flex-wrapper {
-        order: 2;
-      }
-      .Carousel-button {
-        order: 3;
-        margin-left: $single;
-        @include from(md) {
-          margin: 0 $single*4.25 0 auto;
-        }
       }
       svg {
         top: -$single*2.125;
@@ -80,12 +58,15 @@
 
   &-author {
     box: horizontal middle;
+    margin-bottom: $single*1.25;
   }
 
   &-photo {
     @include cover;
     border-radius: 50%;
     size: $single*2.5;
+    margin-right: $single;
+    flex: 0 0 auto;
   }
 
   &-copy {
@@ -95,6 +76,9 @@
       width: 75%;
     }
     @include from(xl) {
+      width: 55%;
+    }
+    @include from(xxl) {
       width: 50%;
     }
     svg {
@@ -121,6 +105,7 @@
       border: 2px solid transparent;
       transition: border-color .13s ease-in-out;
       cursor: pointer;
+      flex: 0 0 auto;
     }
 
     &Item {
